--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Institutional Webpage</title>
+    <style>html{scroll-behavior: smooth;}</style>
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
         </a>
 
         <nav>
-            <a href="#inicio">Inicio</a>
+            <a href="#hero-page">Inicio</a>
             <a href="#clinica">Clínica</a>
             <a href="#farmacia">Farmácia</a>
             <a href="duvidas">Dúvidas</a>
@@ -20,7 +21,7 @@
     </header>
 
     <main>
-        <section class="hero-page">
+        <section id="hero-page">
             <img src="img/start-img.svg" alt="Imagem de uma mulher abraçando um cachorro">
 
             <div class="hero-texts">
@@ -31,8 +32,82 @@
                     garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.
                 </p>
                 <a href="wa.me/..." target="_blank">Marque uma consulta</a>
+                <a href="#clinica">Conheça nossa clínica</a>
             </div>
         </section>
+
+        <section id="clinica">
+            <div>
+                <h2>Cuidado Veterinário de Qualidade</h2>
+                <p>
+                    Nossa clínica veterinária é o local onde à paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu
+                    pet merece.
+                </p>
+
+                <ul>
+                    <li>Consultas de rotina e exames de saúde abrangentes</li>
+                    <li>Vacinação e imunização</li>
+                    <li>Cirurgias e procedimentos veterinários</li>
+                    <li>Tratamento e controle de doenças</li>
+                    <li>Odontologia veterinária</li>
+                    <li>Atendimento de emergência 24 horas</li>
+                    <li>Nutrição e aconselhamento alimentar personalizado</li>
+                </ul>
+            </div>
+
+            <img src="img/clinic-img.svg" alt="imagem da clínica" width="480" height="480" loading="lazy">
+        </section>
+
+        <section id="farmacia">
+            <h2>Venha conferir o nosso petshop e farmácia</h2>
+            <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
+
+            <p>
+                Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.
+            </p>
+        </section>
+
+        <section id="duvidas">
+            <img src="img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
+            <div>
+                <h2>Ficou alguma dúvida?</h2>
+
+                <div>
+                    <h3>Quais serviços são oferecidos pela clínica da PetLife</h3>
+                    <img src="img/arrow-down.svg" alt="flecha indicativa para expandir seção">
+                    <p>
+                        A clínica da Petlife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados para garantir a saúde e o bem-ester do seu pet.
+                    </p>
+                </div>
+
+                <div>
+                    <h3>Quais espécies de animais a clínica veterinária	atende?</h3>
+                    <img src="img/arrow-down.svg" alt="flecha indicativa para expandir seção">
+                    <p>
+                        A clinica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
+                    </p>
+                </div>
+
+                <div>
+                    <h3>A clínica da PetLife possui serviços de emergência?</h3>
+                    <img src="img/arrow-down.svg" alt="flecha indicativa para expandir seção">
+                    <p>
+                        Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe esté pronta para ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
+                    </p>
+                </div>
+
+                <div>
+                    <h3>A clínica oferece serviços de banho e tosa?</h3>
+                    <img src="img/arrow-down.svg" alt="flecha indicativa para expandir seção">
+                    <p>
+                        Sim, a clinica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experíentes garante que seu pet receba cuidados adequados, usando produtos de alta quelidade e técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de proporcionar uma experiência relaxante e agradável pare eles.
+                    </p>
+                </div>
+            </div>
+
+        </section>
+
+        https://cursos.onebitcode.com/area/produto/item/1897391
     </main>
 </body>
 </html>
