Término da estrutura base HTML adicionando footer e adição de link para arquivo de estilização

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Institutional Webpage</title>
     <style>html{scroll-behavior: smooth;}</style>
+
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -16,7 +18,7 @@
             <a href="#hero-page">Inicio</a>
             <a href="#clinica">Clínica</a>
             <a href="#farmacia">Farmácia</a>
-            <a href="duvidas">Dúvidas</a>
+            <a href="#duvidas">Dúvidas</a>
         </nav>
     </header>
 
@@ -106,8 +108,34 @@
             </div>
 
         </section>
-
-        https://cursos.onebitcode.com/area/produto/item/1897391
     </main>
+
+    <footer>
+        <div>
+            <img src="img/logo.svg" alt="">
+            <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
+        </div>
+
+        <div>
+            <strong>Links rápidos</strong>
+            <nav>
+                <a href="#hero-page">Inicio</a>
+                <a href="#clinica">Clínica</a>
+                <a href="#farmacia">Farmácia</a>
+                <a href="#duvidas">Dúvidas</a>
+            </nav>
+        </div>
+
+        <div>
+            <strong>Encontre-nos</strong>
+            <p>WhatsApp: <a href="https://wa.me/55912345678" target="_blank">(55) 91234-5678</a></p>
+            <p>Email: <a href="mailto:contato@petlife.com">contato@petlife.com</a></p>
+            <p>Endreço: Av. 7 de Setembro, nº 42 - Centro</p>
+        </div>
+    </footer>
+
+    <div>
+        Desenvolvido por <a href="https://github.com/AndreBauzil" target="_blank"">Bauzil</a>
+    </div>
 </body>
 </html>
